# build-flask-app

./: .gitignore  Dockerfile  LICENSE  README.md  create-flask-app.sh  deploy.sh  requirements.txt  setup.cfg  setup.py
build_flask_app/: Components.py  component.py  main.py
build_flask_app.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
